# PicoEPDAudioPlayer

./: CMakeLists.txt  EInkMp3.cpp  README.md
libs/audioManager/: CMakeLists.txt  audioManager.cpp  audioManager.h
libs/audioManager/pico_audio_i2s_32b/: audio_i2s.c
libs/audioManager/pico_util_buffer/: buffer.c
libs/audioManager/pico_util_buffer/include/pico/util/: buffer.h
libs/audioPlayer/: CMakeLists.txt  audioPlayer.cpp  audioPlayer.h
libs/audioPlayer/pico_audio_i2s_32b/: CMakeLists.txt
libs/dr_impl/: CMakeLists.txt  dr_mp3_impl.c
libs/epd2in9/: CMakeLists.txt  epd2in9.cpp  epd2in9.h
libs/epdDraw/: CMakeLists.txt  epdDraw-impl.h  epdDraw.c  epdDraw.cpp  epdDraw.h
libs/epdDraw/epd2in9/: CMakeLists.txt  epd2in9-impl.h  epd2in9.c  epd2in9.h
libs/fileManager/: CMakeLists.txt  fileManager.cpp  fileManager.h
src/: UIManager.h  UIMenu.h  UIMenus.cpp  UIMenus.h
